--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -25,7 +25,7 @@
             <ImageView
                 android:id="@+id/moviePoster"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/ic_launcher_foreground"
                 bind:posterPath="@{result.posterPath}"
